kubernetes-manifests-istio/FrontGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: gateway
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - '*'
        - port:
              number: 443
              name: https
              protocol: HTTPS
          tls:
            mode: SIMPLE
            credentialName: httpbin-credential # must be the same as secret name
          hosts:
          - httpbin.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: usersecurityservice
